@@ -89,27 +89,10 @@ kbd_backlight_set(int val, int who)
 
   FILE *fp;
 
+  if (kbd_bck_info.inhibit)
+    return;
+
   curval = kbd_backlight_get();
-
-  /* automatic backlight toggle by user */
-  if ((val == KBD_BACKLIGHT_OFF) && (kbd_bck_info.auto_on))
-    {
-      if (!kbd_bck_info.off)
-	{
-	  kbd_bck_info.off = 1;
-	  kbd_bck_info.level = curval;
-	}
-      else
-	{
-	  kbd_bck_info.off = 0;
-	  val = kbd_bck_info.level;
-	}
-    }
-
-  /* backlight turned on again by user */
-  if ((val > KBD_BACKLIGHT_OFF)
-      && (kbd_bck_info.auto_on) && (kbd_bck_info.off))
-    kbd_bck_info.off = 0;
 
   if (val == curval)
     return;
@@ -136,16 +119,13 @@ kbd_backlight_set(int val, int who)
 }
 
 void
-kbd_backlight_off(void)
-{
-  kbd_backlight_set(KBD_BACKLIGHT_OFF, KBD_USER);
-}
-
-void
 kbd_backlight_step(int dir)
 {
   int val;
   int newval;
+
+  if (kbd_bck_info.inhibit)
+    return;
 
   val = kbd_backlight_get();
 
@@ -176,11 +156,62 @@ kbd_backlight_step(int dir)
   kbd_backlight_set(newval, KBD_USER);
 }
 
+
+void
+kbd_backlight_inhibit_set(int mask)
+{
+  if (!kbd_bck_info.inhibit)
+    kbd_bck_info.inhibit_lvl = kbd_bck_info.level;
+
+  kbd_backlight_set(KBD_BACKLIGHT_OFF,
+		    (mask == KBD_INHIBIT_LID) ? (KBD_AUTO) : (KBD_USER));
+
+  kbd_bck_info.inhibit |= mask;
+
+  logdebug("KBD: inhibit set 0x%02x -> 0x%02x\n", mask, kbd_bck_info.inhibit);
+}
+
+void
+kbd_backlight_inhibit_clear(int mask)
+{
+  kbd_bck_info.inhibit &= ~mask;
+
+  logdebug("KBD: inhibit clear 0x%02x -> 0x%02x\n", mask, kbd_bck_info.inhibit);
+
+  if (kbd_bck_info.inhibit)
+    return;
+
+  if (kbd_bck_info.auto_on)
+    {
+      kbd_bck_info.auto_on = 0;
+      kbd_bck_info.inhibit_lvl = 0;
+    }
+
+  kbd_backlight_set(kbd_bck_info.inhibit_lvl,
+		    (mask == KBD_INHIBIT_LID) ? (KBD_AUTO) : (KBD_USER));
+}
+
+void
+kbd_backlight_inhibit_toggle(int mask)
+{
+  if (kbd_bck_info.inhibit & mask)
+    kbd_backlight_inhibit_clear(mask);
+  else
+    kbd_backlight_inhibit_set(mask);
+}
+
+
 void
 kbd_backlight_init(void)
 {
+  if (kbd_cfg.auto_on)
+    kbd_bck_info.inhibit = 0;
+  else
+    kbd_bck_info.inhibit = KBD_INHIBIT_USER;
+
+  kbd_bck_info.inhibit_lvl = 0;
+
   kbd_bck_info.auto_on = 0;
-  kbd_bck_info.off = 0;
 
   if (!has_kbd_backlight())
     {
@@ -215,13 +246,18 @@ kbd_backlight_ambient_check(void)
   if ((amb_r < 0) || (amb_l < 0))
     return;
 
+  mbpdbus_send_ambient_light(amb_l, kbd_bck_info.l_sens, amb_r, kbd_bck_info.r_sens);
+
+  kbd_bck_info.r_sens = amb_r;
+  kbd_bck_info.l_sens = amb_l;
+
+  /* Inhibited */
+  if (kbd_bck_info.inhibit)
+    return;
+
   if ((amb_r < kbd_cfg.on_thresh) && (amb_l < kbd_cfg.on_thresh))
     {
       logdebug("Ambient light lower threshold reached\n");
-
-      /* backlight turned on automatically, then disabled by user */
-      if (kbd_bck_info.auto_on && kbd_bck_info.off)
-	return;
 
       /* backlight already on */
       if (kbd_backlight_get() > KBD_BACKLIGHT_OFF)
@@ -229,7 +265,6 @@ kbd_backlight_ambient_check(void)
 
       /* turn on backlight */
       kbd_bck_info.auto_on = 1;
-      kbd_bck_info.off = 0;
 
       kbd_backlight_set(kbd_cfg.auto_lvl, KBD_AUTO);
     }
@@ -240,16 +275,10 @@ kbd_backlight_ambient_check(void)
 	  logdebug("Ambient light upper threshold reached\n");
 
 	  kbd_bck_info.auto_on = 0;
-	  kbd_bck_info.off = 0;
 
 	  kbd_backlight_set(KBD_BACKLIGHT_OFF, KBD_AUTO);
 	}
     }
-
-  mbpdbus_send_ambient_light(amb_l, kbd_bck_info.l_sens, amb_r, kbd_bck_info.r_sens);
-
-  kbd_bck_info.r_sens = amb_r;
-  kbd_bck_info.l_sens = amb_l;
 }
 
 
